[package]
name = "logpulse"
version = "0.1.2"
edition = "2021"
description = "High-performance TUI log analyzer with smart format detection"
license = "MIT"
repository = "https://github.com/vltamanec/logpulse"
homepage = "https://github.com/vltamanec/logpulse"
readme = "README.md"
keywords = ["logs", "tui", "monitoring", "docker", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
linemux = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
atty = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
